--- a/portofolio1.html
+++ b/portofolio1.html
@@ -20,6 +20,7 @@
         *{
             margin: 0;
             padding: 0;
+            
         }
         
 
@@ -33,6 +34,7 @@
             border-radius: 50% 50% 10% 10%;
             width: 100%;
             object-fit: cover;
+            overflow: hidden;
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
         }
 
